k8s/docxtemplater-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docgen-docxtemplater
  namespace: docgen
spec:
  type: ClusterIP
  selector:
    app: docgen-docxtemplater
  ports:
    - port: 3000
      targetPort: 3000
