k8s/onlyoffice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docgen-onlyoffice
  namespace: docgen
spec:
  type: ClusterIP
  selector:
    app: docgen-onlyoffice
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
